[tool.poetry]
name = "news-timeline"
version = "0.1.0"
description = ""
authors = ["YuukiHaraProgramming <hara@nlp.ist.i.kyoto-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sumeval = "^0.2.2"
argparse = "^1.4.0"
networkx = "^3.2.1"
nltk = "^3.8.1"
pyspark = "^3.5.0"
requests = "^2.31.0"
bs4 = "^0.0.1"
openai = "0.28"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
